--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Ana Heloisa Ruan</title>
+    <title> Ruan</title>
 </head>
 
 <body>
-    <header>meu proj </header>
+    <header>Proeto Ruan</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>equações de 1 e 2 grau</h1>
+            <h1>Equações de 1 e 2 grau</h1>
             <p>#sandro curió</p>
         </div>
 
